[project]
name = "hx-streamer-pro"
version = "0.2.0"
description = "LAN screen streaming suite with sender and receiver apps."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { file = "LICENSE" }
authors = [
  { name = "AouTzxc" }
]
keywords = ["streaming", "lan", "pyqt6", "tcp", "udp", "nuitka"]
dependencies = [
  "PyQt6>=6.6",
  "opencv-python>=4.8",
  "numpy>=1.26",
  "mss>=9.0",
]

[project.urls]
Homepage = "https://github.com/AouTzxc/HX-Streamer-Pro"
Repository = "https://github.com/AouTzxc/HX-Streamer-Pro"
Issues = "https://github.com/AouTzxc/HX-Streamer-Pro/issues"

[dependency-groups]
build = [
  "Nuitka>=2.7",
  "zstandard>=0.23.0",
]

[tool.uv]
package = false
